# parsagon-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  test.py
.github/workflows/: build.yml
gui/: ParsagonInstaller.nsi  README.md  build.bat  build.sh  install_cert.sh  install_certs.sh  macos.icns  update_gui_env.py
src/parsagon/: __init__.py  __main__.py  action.py  api.py  assistant.py  browser.py  create.py  custom_function.py  edit.py  exceptions.py  executor.py  gui.py  gui_entry.py  highlights.js  main.py  print.py  runs.py  secrets.py  selenium_wrapper.py  settings.py
src/parsagon/gui/: __init__.py  controller.py  menu.py  window.py
src/parsagon/tests/: api_mocks.py  cli_mocks.py  conftest.py  test_executor.py  test_invalid_args.py  test_pipeline_operations.py  test_print.py  test_secrets.py  test_selenium.py
