[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parsagon = ["highlights.js"]

[tool.black]
line-length = 120

[project]
name = "parsagon"
version = "0.12.3"
description = "Allows you to create browser automations with natural language"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Sandy Suh", email="sandy@parsagon.io" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'selenium == 4.9.1',
    'lxml == 4.9.2',
    'httpx == 0.24.1',
    'psutil == 5.9.6',
    'rich == 13.6.0',

    # Used only in pipeline code execution
    'PyVirtualDisplay==3.0',
    'selenium-wire==5.1.0',
    'cssselect==1.1.0',
    'undetected-chromedriver==3.5.3',
    'webdriver-manager==4.0.1',
    'jsonpath-ng==1.5.3',
    'simplejson==3.19.1',
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.2",
    "pytest-mock==3.11.1",
]

[project.urls]
"Homepage" = "https://parsagon.io"

[project.scripts]
parsagon = "parsagon.main:main"
